--- a/src/main/resources/assets/learningmod/lang/en_us.json
+++ b/src/main/resources/assets/learningmod/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.learningmod.bismuth_block": "Block of Bismuth",
   "block.learningmod.bismuth_ore": "Bismuth Ore",
+  "block.learningmod.bismuth_deepslate_ore": "Deepslate Bismuth Ore",
 
   "creativetab.learningmod.bismuth_items": "Bismuth Items",
   "creativetab.learningmod.bismuth_blocks": "Bismuth Blocks"
