Custom block with custom action

--- a/src/main/resources/assets/learningmod/lang/en_us.json
+++ b/src/main/resources/assets/learningmod/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.learningmod.bismuth_block": "Block of Bismuth",
   "block.learningmod.bismuth_ore": "Bismuth Ore",
   "block.learningmod.bismuth_deepslate_ore": "Deepslate Bismuth Ore",
+  "block.learningmod.magic_block": "Magic Block",
 
   "creativetab.learningmod.bismuth_items": "Bismuth Items",
   "creativetab.learningmod.bismuth_blocks": "Bismuth Blocks"
