--- a/src/main/resources/assets/learningmod/lang/en_us.json
+++ b/src/main/resources/assets/learningmod/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.learningmod.frostfire_ice": "Frostfire Ice",
   "item.learningmod.starlight_ashes": "Starlight Ashes",
 
+
   "block.learningmod.bismuth_block": "Block of Bismuth",
   "block.learningmod.bismuth_ore": "Bismuth Ore",
   "block.learningmod.bismuth_deepslate_ore": "Deepslate Bismuth Ore",
@@ -15,5 +16,18 @@
   "block.learningmod.magic_block": "Magic Block",
 
   "creativetab.learningmod.bismuth_items": "Bismuth Items",
-  "creativetab.learningmod.bismuth_blocks": "Bismuth Blocks"
+  "creativetab.learningmod.bismuth_blocks": "Bismuth Blocks",
+
+
+  "tooltip.learningmod.generic_shift.tooltip" : "Press §eShift§r for more info",
+
+  "tooltip.learningmod.magic_block.tooltip" : "This block is very §5§nMAGICAL§r",
+
+  "tooltip.learningmod.chisel.shift_down" : "Right click on some block to change their form",
+
+  "tooltip.learningmod.radish.tooltip": "Tastes good",
+
+  "tooltip.learningmod.frostfire_ice.tooltip": "A fuel made from two opposites",
+
+  "tooltip.learningmod.starlight_ashes.tooltip" : "A powerful fuel from the death of something majestic"
 }
