Added a lamp with a blockstate

--- a/src/main/resources/assets/learningmod/lang/en_us.json
+++ b/src/main/resources/assets/learningmod/lang/en_us.json
@@ -28,6 +28,9 @@
 
   "block.learningmod.magic_block": "Magic Block",
 
+  "block.learningmod.bismuth_lamp": "Bismuth Lamp",
+
+
   "creativetab.learningmod.bismuth_items": "Bismuth Items",
   "creativetab.learningmod.bismuth_blocks": "Bismuth Blocks",
 
